Add styles and main form

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <main>
     <div class="wrapper">
         <section class="signin">
-            <h2>Sign n to your account</h2>
+            <h2>Sign in to your account</h2>
             <form action method="post" class="signin-form">
                 <input type="email" name="email" placeholder="Email address">
                 <input type="password" name="password" placeholder="Password">
