Add main markup and left sidebar

--- a/page.html
+++ b/page.html
@@ -5,12 +5,86 @@
     <title>Задача 1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700&amp;subset=cyrillic-ext" rel="stylesheet">
+    <link rel="stylesheet/less" href="css/page-style.less">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.7.1/less.min.js" ></script>
     <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
 </head>
 <body>
-    
+<header>
+    <span class="status"></span> Mentee
+</header>
+<div class="main-page-content">
+    <aside class="aside-bar">
+        <input type="search" class="search" placeholder="Search">
+        <div class="separator"><img src="img/10x10.png" alt=""></div>
+        <section class="communities">
+            <div class="communities-data communities-data-title">
+                <img src="img/50x50.png" alt="">
+                <p class="title">Communities</p>
+            </div>
+            <div class="communities-data selected">
+                <img src="img/50x50.png" alt="">
+                <p class="title">Srgh seigjsaegisegs srg\wsehg\wserh</p>
+                <time>Tuesday</time>
+            </div>
+            <div class="communities-data">
+                <img src="img/50x50.png" alt="">
+                <p class="title">Srgh seigjsaegisegs srg\wsehg\wserh</p>
+                <time>Tuesday</time>
+            </div>
+            <div class="communities-data">
+                <img src="img/50x50.png" alt="">
+                <p class="title">Srgh seigjsaegisegs srg\wsehg\wserh</p>
+                <time>Tuesday</time>
+            </div>
+            <div class="communities-data">
+                <img src="img/50x50.png" alt="">
+                <p class="title">Srgh seigjsaegisegs srg\wsehg\wserh</p>
+                <time>Tuesday</time>
+            </div>
+            <div class="communities-data">
+                <img src="img/50x50.png" alt="">
+                <p class="title">Srgh seigjsaegisegs srg\wsehg\wserh</p>
+                <time>Tuesday</time>
+            </div>
+            <div class="communities-data">
+                <img src="img/50x50.png" alt="">
+                <p class="title">Srgh seigjsaegisegs srg\wsehg\wserh</p>
+                <time>Tuesday</time>
+            </div>
+            <div class="communities-data">
+                <img src="img/50x50.png" alt="">
+                <p class="title">Srgh seigjsaegisegs srg\wsehg\wserh</p>
+                <time>Tuesday</time>
+            </div>
+            <div class="communities-data">
+                <img src="img/50x50.png" alt="">
+                <p class="title">Srgh seigjsaegisegs srg\wsehg\wserh</p>
+                <time>Tuesday</time>
+            </div>
+            <div class="communities-data">
+                <img src="img/50x50.png" alt="">
+                <p class="title">Srgh seigjsaegisegs srg\wsehg\wserh</p>
+                <time>Tuesday</time>
+            </div>
+            <div class="communities-data">
+                <img src="img/50x50.png" alt="">
+                <p class="title">Srgh seigjsaegisegs srg\wsehg\wserh</p>
+                <time>Tuesday</time>
+            </div>
+            <div class="communities-data">
+                <img src="img/50x50.png" alt="">
+                <p class="title">Srgh seigjsaegisegs srg\wsehg\wserh</p>
+                <time>Tuesday</time>
+            </div>
+        </section>
+    </aside>
+    <main class="main-bar">
+        Main
+    </main>
+</div>
 </body>
 </html>
