Add community header in main block

--- a/page.html
+++ b/page.html
@@ -27,7 +27,7 @@
             </div>
             <div class="communities-data selected">
                 <img src="img/50x50.png" alt="">
-                <p class="title">Srgh seigjsaegisegs srg\wsehg\wserh</p>
+                <p class="title">All</p>
                 <time>Tuesday</time>
             </div>
             <div class="communities-data">
@@ -83,7 +83,26 @@
         </section>
     </aside>
     <main class="main-bar">
-        Main
+        <div class="community-header">
+            <div class="community-info">
+                <img src="img/80x80.png" alt="">
+                <div>
+                    <p class="name">
+                        All
+                    </p>
+                    <p class="num">
+                        5 participants
+                    </p>
+                    <p class="type">
+                        Conversatior
+                    </p>
+                </div>
+            </div>
+            <button>Start conference</button>
+        </div>
+        <div class="main-bar-content">
+            main-bar-content
+        </div>
     </main>
 </div>
 </body>
