Add writting line

--- a/page.html
+++ b/page.html
@@ -83,7 +83,7 @@
         </section>
     </aside>
     <main class="main-bar">
-        <div class="community-header">
+        <section class="community-header">
             <div class="community-info">
                 <img src="img/80x80.png" alt="">
                 <div>
@@ -99,9 +99,14 @@
                 </div>
             </div>
             <button>Start conference</button>
-        </div>
+        </section>
         <div class="main-bar-content">
-            main-bar-content
+            <div class="conversation">
+                conversation
+            </div>
+            <section class="writting">
+                <input type="text" placeholder="Write a message">
+            </section>
         </div>
     </main>
 </div>
