Add available Participants and vertical strething of all blocks

--- a/page.html
+++ b/page.html
@@ -102,7 +102,82 @@
         </section>
         <div class="main-bar-content">
             <div class="conversation">
-                conversation
+                <section class="messages"></section>
+                <section class="participants">
+                    <div class="title">Available Participants</div>
+                    <ul>
+                        <li>Participant1</li>
+                        <li>Participant2</li>
+                        <li>Participant3</li>
+                        <li>Participant4</li>
+                        <li>Participant5</li>
+                        <li>Participant6</li>
+                        <li>Participant7</li>
+                        <li>Participant8</li>
+                        <li>Participant9</li>
+                        <li>Participant10</li>
+                        <li>Participant1</li>
+                        <li>Participant2</li>
+                        <li>Participant3</li>
+                        <li>Participant4</li>
+                        <li>Participant5</li>
+                        <li>Participant6</li>
+                        <li>Participant7</li>
+                        <li>Participant8</li>
+                        <li>Participant9</li>
+                        <li>Participant10</li>
+                        <li>Participant1</li>
+                        <li>Participant2</li>
+                        <li>Participant3</li>
+                        <li>Participant4</li>
+                        <li>Participant5</li>
+                        <li>Participant6</li>
+                        <li>Participant7</li>
+                        <li>Participant8</li>
+                        <li>Participant9</li>
+                        <li>Participant10</li>
+                        <li>Participant1</li>
+                        <li>Participant2</li>
+                        <li>Participant3</li>
+                        <li>Participant4</li>
+                        <li>Participant5</li>
+                        <li>Participant6</li>
+                        <li>Participant7</li>
+                        <li>Participant8</li>
+                        <li>Participant9</li>
+                        <li>Participant10</li>
+                        <li>Participant1</li>
+                        <li>Participant2</li>
+                        <li>Participant3</li>
+                        <li>Participant4</li>
+                        <li>Participant5</li>
+                        <li>Participant6</li>
+                        <li>Participant7</li>
+                        <li>Participant8</li>
+                        <li>Participant9</li>
+                        <li>Participant10</li>
+                        <li>Participant1</li>
+                        <li>Participant2</li>
+                        <li>Participant3</li>
+                        <li>Participant4</li>
+                        <li>Participant5</li>
+                        <li>Participant6</li>
+                        <li>Participant7</li>
+                        <li>Participant8</li>
+                        <li>Participant9</li>
+                        <li>Participant10</li>
+                        <li>Participant1</li>
+                        <li>Participant2</li>
+                        <li>Participant3</li>
+                        <li>Participant4</li>
+                        <li>Participant5</li>
+                        <li>Participant6</li>
+                        <li>Participant7</li>
+                        <li>Participant8</li>
+                        <li>Participant9</li>
+                        <li>Participant10</li>
+                    </ul>
+                </section>
             </div>
             <section class="writting">
                 <input type="text" placeholder="Write a message">
