--- a/page.html
+++ b/page.html
@@ -102,7 +102,78 @@
         </section>
         <div class="main-bar-content">
             <div class="conversation">
-                <section class="messages"></section>
+                <section class="messages">
+                    <article>
+                        <img src="img/50x50.png" alt="">
+                        <div class="content">
+                            <p class="name">Mentee</p>
+                            <p class="message-body">
+                                Endeavor bachelor but add eat pleasure doubtful sociable. Age forming covered you entered the examine. Blessing scarcely confined her contempt wondered shy. Dashwoods contented sportsmen at up no convinced cordially affection. Am so continued resembled frankness disposing engrossed dashwoods. Earnest greater on no observe fortune norland. Hunted mrs ham wishes stairs. Continued he as so breakfast shameless. All men drew its post knew. Of talking of calling however civilly wishing resolve.
+                            </p>
+                            <time>Yesterday, 12:10 PM</time>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="img/50x50.png" alt="">
+                        <div class="content">
+                            <p class="name">Mentee</p>
+                            <p class="message-body">
+                                Endeavor bachelor but add eat pleasure doubtful sociable. Age forming covered you entered the examine. Blessing scarcely confined her contempt wondered shy. Dashwoods contented sportsmen at up no convinced cordially affection. Am so continued resembled frankness disposing engrossed dashwoods. Earnest greater on no observe fortune norland. Hunted mrs ham wishes stairs. Continued he as so breakfast shameless. All men drew its post knew. Of talking of calling however civilly wishing resolve.
+                            </p>
+                            <time>Yesterday, 12:10 PM</time>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="img/50x50.png" alt="">
+                        <div class="content">
+                            <p class="name">Mentee</p>
+                            <p class="message-body">
+                                Endeavor bachelor but add eat pleasure doubtful sociable. Age forming covered you entered the examine. Blessing scarcely confined her contempt wondered shy. Dashwoods contented sportsmen at up no convinced cordially affection. Am so continued resembled frankness disposing engrossed dashwoods. Earnest greater on no observe fortune norland. Hunted mrs ham wishes stairs. Continued he as so breakfast shameless. All men drew its post knew. Of talking of calling however civilly wishing resolve.
+                            </p>
+                            <time>Yesterday, 12:10 PM</time>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="img/50x50.png" alt="">
+                        <div class="content">
+                            <p class="name">Mentee</p>
+                            <p class="message-body">
+                                Endeavor bachelor but add eat pleasure doubtful sociable. Age forming covered you entered the examine. Blessing scarcely confined her contempt wondered shy. Dashwoods contented sportsmen at up no convinced cordially affection. Am so continued resembled frankness disposing engrossed dashwoods. Earnest greater on no observe fortune norland. Hunted mrs ham wishes stairs. Continued he as so breakfast shameless. All men drew its post knew. Of talking of calling however civilly wishing resolve.
+                            </p>
+                            <time>Yesterday, 12:10 PM</time>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="img/50x50.png" alt="">
+                        <div class="content">
+                            <p class="name">Mentee</p>
+                            <p class="message-body">
+                                Endeavor bachelor but add eat pleasure doubtful sociable. Age forming covered you entered the examine. Blessing scarcely confined her contempt wondered shy. Dashwoods contented sportsmen at up no convinced cordially affection. Am so continued resembled frankness disposing engrossed dashwoods. Earnest greater on no observe fortune norland. Hunted mrs ham wishes stairs. Continued he as so breakfast shameless. All men drew its post knew. Of talking of calling however civilly wishing resolve.
+                            </p>
+                            <time>Yesterday, 12:10 PM</time>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="img/50x50.png" alt="">
+                        <div class="content">
+                            <p class="name">Mentee</p>
+                            <p class="message-body">
+                                Endeavor bachelor but add eat pleasure doubtful sociable. Age forming covered you entered the examine. Blessing scarcely confined her contempt wondered shy. Dashwoods contented sportsmen at up no convinced cordially affection. Am so continued resembled frankness disposing engrossed dashwoods. Earnest greater on no observe fortune norland. Hunted mrs ham wishes stairs. Continued he as so breakfast shameless. All men drew its post knew. Of talking of calling however civilly wishing resolve.
+                            </p>
+                            <time>Yesterday, 12:10 PM</time>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="img/50x50.png" alt="">
+                        <div class="content">
+                            <p class="name">Mentee</p>
+                            <p class="message-body">
+                                Endeavor bachelor but add eat pleasure doubtful sociable. Age forming covered you entered the examine. Blessing scarcely confined her contempt wondered shy. Dashwoods contented sportsmen at up no convinced cordially affection. Am so continued resembled frankness disposing engrossed dashwoods. Earnest greater on no observe fortune norland. Hunted mrs ham wishes stairs. Continued he as so breakfast shameless. All men drew its post knew. Of talking of calling however civilly wishing resolve.
+                            </p>
+                            <time>Yesterday, 12:10 PM</time>
+                        </div>
+                    </article>
+                </section>
                 <section class="participants">
                     <div class="title">Available Participants</div>
                     <ul>
