Add gulp for css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <title>Задача 2 - Login page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/less/reset.less">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700&amp;subset=cyrillic-ext" rel="stylesheet">
-    <link rel="stylesheet/less" href="css/index-style.less">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.7.1/less.min.js" ></script>
+    <link rel="stylesheet/less" href="css/main.css">
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
