--- a/page.html
+++ b/page.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/less/reset.less">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700&amp;subset=cyrillic-ext" rel="stylesheet">
-    <link rel="stylesheet/less" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
