--- a/page.html
+++ b/page.html
@@ -249,10 +249,12 @@
                 </div>
             </div>
             <div class="writting">
-                <input type="text" placeholder="Write a message">
+                <div class="input" contenteditable="true">Write a message</div>
             </div>
         </div>
     </main>
 </div>
+<script src="js/jquery.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
